z-index fix. keyframes. contact text color.

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -23,6 +23,7 @@
         margin-bottom: 16px;
         border: 1px solid var(--contact-border);
         background-color: var(--contact-background);
+        color: var(--text-color);
         font-size: 16px;
         letter-spacing: 4px;
         opacity: 0.5;
