--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,4 +1,6 @@
 @import '../../../assets/styles/themes.scss';
+@import '../../../assets/styles/keyframes.scss';
+
 
 .content-container {
   background-color: var(--background-color);
@@ -71,6 +73,7 @@
   margin-left: 40px;
   font-size: 18px;
   letter-spacing: 4px;
+  max-width: 500px;
 }
 
 .configs {
@@ -144,69 +147,6 @@
 
 .icon {
   font-size: 24px;
-}
-
-@keyframes textAnimation {
-  0% {
-    letter-spacing: 11px;
-  }
-  100% {
-    letter-spacing: 10px;
-  }
-}
-
-@keyframes glitchText {
-  2%, 64% {
-    transform: translate(2px, 0);
-  }
-  4%, 60% {
-    transform: translate(-2px, 0);
-  }
-  62% {
-    transform: translate(0, 0);
-  }
-  63% {
-    transform: translate(0, 2px);
-  }
-  65% {
-    transform: translate(0, -2px);
-  }
-  94% {
-    transform: translate(0, 0);
-  }
-  96%, 98% {
-    transform: translate(2px, 0);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes glitchHomeText {
-  2%, 64% {
-    transform: translate(10px, 0);
-  }
-  4%, 60% {
-    transform: translate(-8px, 0);
-  }
-  62% {
-    transform: translate(0, 0);
-  }
-  63% {
-    transform: translate(0, 8px);
-  }
-  65% {
-    transform: translate(0, -8px);
-  }
-  94% {
-    transform: translate(0, 0);
-  }
-  96%, 98% {
-    transform: translate(10px, 0);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
 }
 
 @media screen and (max-width: 768px) {
